# Customer-Churn-Prediction-Platform

./: .env.example  .gitignore  Makefile  README.md  api.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test_db.py  test_pipeline.py  ui.Dockerfile
.github/workflows/: ci.yml
api/: main.py
api/routes/: batch.py  health.py  predict.py
api/schemas/: batch.py  churn.py
api/services/: batch_service.py  prediction_service.py
database/: base.py  session.py
database/models/: prediction.py
database/repositories/: base.py  prediction_repository.py
ml/inference/: evaluator.py  explainer.py
ml/pipeline/: features.py  preprocessor.py
ml/saved_models/: champion_model.joblib
ml/training/: search_spaces.py  trainer.py
scripts/: download_data.py  evaluate_model.py  train_run.py
tests/: test_api.py
ui/: app.py
