[tool.poetry]
name = "customer-churn-platform"
version = "0.1.0"
description = "Production-ready Customer Churn Prediction Platform"
authors = ["Tu Nombre <tu@email.com>"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Seleccionamos las reglas de estilo y buenas prácticas
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
# Ignoramos reglas que chocan con FastAPI y textos largos de Streamlit
ignore = [
    "E501",   # Ignorar líneas largas (evita conflictos con descripciones largas)
    "B008",   # Ignorar llamadas a funciones (necesario para FastAPI Depends/File)
    "B904",   # Ignorar encadenamiento estricto de excepciones
    "SIM108", # Permitir if/else tradicionales
    "UP046"   # Ignorar sintaxis estricta de genéricos en repositorios
]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=api --cov=ml --cov=database --cov-report=term-missing"
testpaths = [
    "tests",
]